0695dd5c3fb64810edd88aa13107452695a82a8e Fix: Bulma styling on narrow screens would not centre the buttons as expected
Sync to source repo @0695dd5c3fb64810edd88aa13107452695a82a8e

--- a/css/buttons.bulma.css
+++ b/css/buttons.bulma.css
@@ -371,14 +371,17 @@ div.dt-button-background {
     float: none;
   }
 }
-div.dt-buttons button.btn.processing,
-div.dt-buttons div.btn.processing,
-div.dt-buttons a.btn.processing {
+div.dt-buttons.field.is-grouped {
+  display: block;
+}
+div.dt-buttons.field.is-grouped button.btn.processing,
+div.dt-buttons.field.is-grouped div.btn.processing,
+div.dt-buttons.field.is-grouped a.btn.processing {
   color: rgba(0, 0, 0, 0.2);
 }
-div.dt-buttons button.btn.processing:after,
-div.dt-buttons div.btn.processing:after,
-div.dt-buttons a.btn.processing:after {
+div.dt-buttons.field.is-grouped button.btn.processing:after,
+div.dt-buttons.field.is-grouped div.btn.processing:after,
+div.dt-buttons.field.is-grouped a.btn.processing:after {
   position: absolute;
   top: 50%;
   left: 50%;
